[package]
name = "dgut-reqwest"
version = "0.1.0"
edition = "2021"
authors = ["Richard Tung<zqdbyct@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="main"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
