[package]
name = "dgut-reqwest"
license = "GPL-3.0-or-later"
version = "0.1.0"
edition = "2021"
authors = ["Richard Tung <zqdbyct@gmail.com>"]
description = "dgut-reqwest but in rust, blazingly fast but maybe useless"
repository = "https://github.com/ReadChart/dgut-reqwest-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
